# amcheck

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
amcheck/: __init__.py  ahc_data.py  amcheck.py
tests/: test_amcheck.py
tutorial/: amcheck_tutorial.ipynb
tutorial/examples/: FeO.vasp  MnF2.cif  MnTe.vasp  NiAs.cif
